- Merged 2 calculate age methods to one - In /botinfo, replaced the name field with field with the mention of the bot - Created StringUtils.booleanToEmoji - Changed the type of Property.estateTax to BigInteger - Currency amounts in /property list are now formatted with StringUtils.numberFormat - Made Rent use BigInteger - Added :x:'s to the fail messages of /reports - In /shop view, the price is now formatted with StringUtils.numberFormat - Made ShopItem use BigInteger